Add renovate workflow and configuration