@@ -1,4 +1,4 @@
-// Copyright (c) 2023 Orange. All rights reserved.
+// Copyright (c) 2023-2025 Orange. All rights reserved.
 // This software is distributed under the BSD 3-Clause-clear License, the text of which is available
 // at https://spdx.org/licenses/BSD-3-Clause-Clear.html or see the "LICENSE" file for more details.
 
@@ -17,8 +17,6 @@ import normGUI.engine.GUIUnit;
 /**
  * Represente l'element graphique correspondant au style ComboBox. Affichage de
  * reels dans une zone de liste. Utilisation d'une JComboBox.
- *
- * @author Marc Boulle
  */
 public class GUIDoubleElementComboBox extends GUIDoubleElement
 {
@@ -88,15 +86,14 @@ public class GUIDoubleElementComboBox extends GUIDoubleElement
                         String[] sParams = getParametersAsArray();
                         Double[] dParams = new Double[sParams.length];
                         for (int i = 0; i < sParams.length; i++)
-                                dParams[i] = new Double(sParams[i]);
+                                dParams[i] = Double.valueOf(sParams[i]);
                         return dParams;
                 } else
                         return null;
         }
 
         /**
-         * Ajoute le composant d'affichage et son libelle dans le panel de l'unite
-         * mere
+         * Ajoute le composant d'affichage et son libelle dans le panel de l'unite mere
          *
          * @param panel       Panneau de l'unite mere dans lequel sera ajoute le
          *                    composant d'affichage
@@ -138,5 +135,5 @@ public class GUIDoubleElementComboBox extends GUIDoubleElement
          *
          * @param sValue La nouvelle valeur graphique de l'element
          */
-        public void graphicSetValue(String sValue) { ((JComboBox)component).setSelectedItem(new Double(sValue)); }
+        public void graphicSetValue(String sValue) { ((JComboBox)component).setSelectedItem(Double.valueOf(sValue)); }
 }
